--- a/style/style.css
+++ b/style/style.css
@@ -2,34 +2,33 @@
     background-color: #2C3E50;
 }
 .jumbotrone {
-    height: 500px;
     background-color: #1ABC9C;
+}
+img {
+    width: 50%;
+}
+.picture img {
+    width: 90%;
 }
 .portfolio {
     height: 100px;
 }
 .picture1{
-    height: 300px;
     background-color: #BA4B63;
 }
 .picture2 {
-    height: 300px;
     background-color: #1EA4B6;
 }
 .picture3 {
-    height: 300px;
     background-color: #140F0F;
 }
 .picture4 {
-    height: 300px;
     background-color: #1C83C1;
 }
 .picture5 {
-    height: 300px;
     background-color: #0E38B5;
 }
 .picture6 {
-    height: 300px;
     background-color: #CCB2A3;
 }
 div[class^="picture"] {
@@ -37,7 +36,6 @@ div[class^="picture"] {
     border-radius: 10px;
 }
 .about {
-    height: 700px;
     background-color: #1ABC9C;
 }
 .about h2 {
@@ -45,11 +43,15 @@ div[class^="picture"] {
 }
 .about p {
 }
-.contactme {
-    height: 300px;
+.contactme .form-control {
+    border: 0;
+    border-radius: 0;
+    border-bottom: 1px solid;
+}
+.bg-green {
+    background-color: #1ABC9C;
 }
 .contacts {
-    height: 150px;
     background-color: #3A546D;
 }
 .copyright {
