--- a/style/style.css
+++ b/style/style.css
@@ -7,14 +7,19 @@
 .txt-color-green {
     color: #1ABC9C;
 }
-.bg-dblue {
-    background-color: #2C3E50;
-}
 .jumbotrone {
     background-color: #1ABC9C;
 }
 img {
     width: 30%;
+}
+.hr {
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+}
+.bg-dblue {
+    background-color: #2C3E50;
 }
 .picture img {
     width: 90%;
